force-app/main/default/objects/Integration_Setup__c/Integration_Setup__c.object-meta.xml
<CustomObject>
    <description>Integration Setup</description>
    <label>Integration Setup</label>
    <nameField>
        <displayFormat>INT-{000}</displayFormat>
        <label>Integration Setup No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>