force-app/main/default/objects/Integration_Setup__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Client ID</description>
    <label>Client ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>