force-app/main/default/objects/Integration_Setup__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Client Secret</description>
    <label>Client Secret</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>