force-app/main/default/objects/Integration_Setup__c/fields/EndPoints__c.field-meta.xml
<CustomField>
    <fullName>EndPoints__c</fullName>
    <description>EndPoints</description>
    <label>EndPoints</label>
    <length>240</length>
    <type>Text</type>
</CustomField>