force-app/main/default/objects/Integration_Setup__c/fields/JWT_Certificate__c.field-meta.xml
<CustomField>
    <fullName>JWT_Certificate__c</fullName>
    <description>JWT Certificate</description>
    <inlineHelpText>JWT Certificate</inlineHelpText>
    <label>JWT Certificate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>