force-app/main/default/objects/Integration_Setup__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password</description>
    <inlineHelpText>Password</inlineHelpText>
    <label>Password</label>
    <length>150</length>
    <type>Text</type>
</CustomField>