force-app/main/default/objects/Integration_Setup__c/fields/Server_Name__c.field-meta.xml
<CustomField>
    <fullName>Server_Name__c</fullName>
    <description>Server Name</description>
    <inlineHelpText>Server Name</inlineHelpText>
    <label>Server Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>