force-app/main/default/objects/Integration_Setup__c/fields/Server_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Server_User_Name__c</fullName>
    <description>Server User Name</description>
    <inlineHelpText>Server User Name</inlineHelpText>
    <label>Server User Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>