force-app/main/default/objects/Integration_Setup__c/fields/Setup_Name__c.field-meta.xml
<CustomField>
    <fullName>Setup_Name__c</fullName>
    <description>Integration Name</description>
    <inlineHelpText>Integration Name</inlineHelpText>
    <label>Setup Name</label>
    <length>240</length>
    <required>true</required>
    <type>Text</type>
</CustomField>